Rename Site and remove CSS tests

--- a/KonradZuse.html
+++ b/KonradZuse.html
@@ -71,7 +71,7 @@
 
         <footer>
           <h3>Weiteres</h3>
-          <a href="AlanTuring.html" target="_blank">Alan Turing</a>
+          <a href="index.html" target="_blank">Alan Turing</a>
         </footer>
       </article>
     </main>
