Change the path of the jpgs

--- a/KonradZuse.html
+++ b/KonradZuse.html
@@ -14,7 +14,7 @@
 
         <section>
           <div class="picture-frame">
-            <img src="/bilder/KonradZuse.jpg" width="200px" />
+            <img src="KonradZuse.jpg" width="200px" />
             <p class="picture-sub-text">Konrad Zuse (1992)</p>
           </div>
         </section>
