--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <section>
           <div class="picture-frame">
-            <img src="/bilder/AlanTuring.jpg" width="200px" />
+            <img src="AlanTuring.jpg" width="200px" />
             <p class="picture-sub-text">Alan Turing (ca. 1938)</p>
           </div>
         </section>
